--- a/shortcuts-wide.cfg
+++ b/shortcuts-wide.cfg
@@ -2,8 +2,8 @@
 # Each line should contain three fields separated by '#'
 # In my case the '<Mod4>' is mapped to the Win key.
 # 	script#shortcut#comment
-bash ${PWD}/resize_window.bash left#<Mod4>Left#Resize window so that it occupies left part of the screen
-bash ${PWD}/resize_window.bash right#<Mod4>Right#Resize window so that it occupies right part of the screen
+bash ${PWD}/resize_window.bash left-thirds#<Mod4>Left#Resize window so that it occupies left part of the screen
+bash ${PWD}/resize_window.bash right-third#<Mod4>Right#Resize window so that it occupies right part of the screen
 bash ${PWD}/resize_window.bash top#<Mod4>Up#Resize window so that it occupies upper left part of the screen
 bash ${PWD}/resize_window.bash bottom#<Mod4>Down#Resize window so that it occupies lower left half of the screen
 mate-terminal --working-directory=${HOME}#<Mod4>x#Launch terminal
